this is really ugly right now. not proud

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <body class="container">
 
     <h1> Everything is Groovy </h1>
+    <h4> in this page from the 90's</h4>
 
     <button id="complimentButton">Get a compliment</button>
 
